src/test/ui/parser/recover-enum.stderr
error: expected one of `(`, `,`, `=`, `{`, or `}`, found `Bad`
  --> $DIR/recover-enum.rs:6:9
   |
LL |         Very
   |             - expected one of `(`, `,`, `=`, `{`, or `}` here
LL |         Bad
   |         ^^^ unexpected token

error: aborting due to previous error

